..F....... [ZBXNEXT-4045] implemented maximum size for graphs in widgets (gcalenko)
A.F....... [ZBX-1357] enabled Hebrew translation to be displayed by default (zalex_ua)
A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), French, German, Hebrew, Japanese, Korean, Russian, Turkish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
..F....... [ZBX-13542] fixed http steps on template not inheriting hosts application setting (nikita)
..F....... [ZBX-13618] fixed wrong variables order in translatable error message (nikita)
..F....... [ZBX-13344] fixed default condition for trigger based actions (agriscenko)
........S. [ZBX-13613] improved a history syncer when backend elasticsearch is not available (MVekslers)
...G...... [ZBX-13544] fixed agent crashes when using regex with 'Log' item for Mac OSX (MVekslers)
........S. [ZBX-13611] fixed lld rules not always saving their state/error message changes (wiper)
........S. [ZBX-13571] fixed regression that resulted in slow history data queries on partitioned tables (wiper)
A.F....... [ZBX-13424] added possibility to select web items as master items and improved copying of dependent items to destination hosts and templates (Ivo)
A......... [ZBX-13573] fixed undefined index message changing Action "Acknowledgment operations" from "Remote command" to "Notify all involved" (agriscenko)
A......... [ZBX-13570] fixed undefined index in API call (agriscenko)
A......... [ZBX-13331] removed "recovery" property from action.get API method response (nikita)
..F....... [ZBX-13309] fixed displaying of Problem/Recovery time (agriscenko, ashubin, Sasha)
.......PS. [ZBX-13450] fixed server and proxy compilation problem for Solaris 10 (MVekslers)
A.F....... [ZBX-13458,ZBX-13494] fixed resolving of the macros in map labels for non-superadmin users (Sasha)
..F....... [ZBX-13526] fixed widget placeholder jumping instead of resizing while dashboard edit (ashubin)