@@ -19,6 +19,7 @@ A.F....... [ZBX-1357] enabled Hebrew translation to be displayed by default (zal
 A.F....... [ZBX-1357] updated Chinese (China), Czech, English (United States), French, German, Hebrew, Japanese, Korean, Russian, Turkish, Ukrainian translations; thanks to Zabbix translators (zalex_ua)
 
 Bug fixes:
+..F....... [ZBX-13298] fixed missing graph after faulty graph edit form submission (nikita)
 ..F....... [ZBX-13542] fixed http steps on template not inheriting hosts application setting (nikita)
 ..F....... [ZBX-13618] fixed wrong variables order in translatable error message (nikita)
 ..F....... [ZBX-13344] fixed default condition for trigger based actions (agriscenko)
